--- a/nx.json
+++ b/nx.json
@@ -16,6 +16,7 @@
       "runner": "@nrwl/nx-cloud",
       "options": {
         "cacheableOperations": [
+          "prebuild",
           "build",
           "prepare",
           "check-format",
@@ -39,20 +40,28 @@
     "db:prisma:generate": {
       "dependsOn": ["^db:prisma:generate"]
     },
+    "prebuild": {
+      "dependsOn": ["^prebuild"]
+    },
     "build": {
-      "dependsOn": ["^build", "db:prisma:generate", "^db:prisma:generate"]
+      "dependsOn": [
+        "prebuild",
+        "^build",
+        "db:prisma:generate",
+        "^db:prisma:generate"
+      ]
+    },
+    "postbuild": {
+      "dependsOn": ["build", "^postbuild"]
     },
     "serve": {
       "dependsOn": ["db:prisma:generate"]
-    },
-    "prepare": {
-      "dependsOn": ["^prepare"]
     },
     "lint": {
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json"]
     },
     "docker:build": {
-      "dependsOn": ["build"]
+      "dependsOn": ["prebuild", "build", "postbuild"]
     }
   }
 }
