--- a/helm/charts/infra/templates/pv.yaml
+++ b/helm/charts/infra/templates/pv.yaml
@@ -1,3 +1,15 @@
-{{ include "base.pv" (list . "infra.pv") -}}
-{{- define "infra.pv" -}}
-{{- end }}
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: {{ .Values.global.pv.name }}
+spec:
+  capacity:
+    storage: {{ .Values.global.pv.storageCapacity }}
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  storageClassName: efs-sc
+  persistentVolumeReclaimPolicy: Retain
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: {{ .Values.global.pv.handle }}
