change pvc for dsg job

--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -48,7 +48,7 @@ spec:
                     volumes:
                       - name: persistent-storage
                         persistentVolumeClaim:
-                          claimName: efs-claim-{{ .Values.envName }}-dsg
+                          claimName: dsg-jobs
                 ttlSecondsAfterFinished: {{ .Values.job.ttlSecondsAfterFinished }}
                 backoffLimit: 0
           parameters:
