--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -38,9 +38,9 @@ spec:
                           - name: BUILD_ID
                             value: null # provided in parameters
                           - name: STATUS_UPDATE_URL
-                            value: http://amplication-build-manager.next.svc.cluster.local/build-runner/complete-code-generation-step
+                            value: http://amplication-build-manager/build-runner/complete-code-generation-step
                           - name: CREATE_LOG_URL
-                            value: http://amplication-build-manager.next.svc.cluster.local/build-logger/create-log
+                            value: http://amplication-build-manager/build-logger/create-log
                         volumeMounts:
                           - name: persistent-storage
                             mountPath: /efs
