--- a/packages/amplication-data-service-generator/project.json
+++ b/packages/amplication-data-service-generator/project.json
@@ -7,6 +7,7 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
+      "dependsOn": ["prebuild"],
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
