Set amplication prisma db as a dependency for EE git pull service

--- a/ee/packages/amplication-git-pull-service/project.json
+++ b/ee/packages/amplication-git-pull-service/project.json
@@ -5,7 +5,8 @@
   "projectType": "application",
   "implicitDependencies": [
     "amplication-kafka",
-    "amplication-nest-logger-module"
+    "amplication-nest-logger-module",
+    "amplication-prisma-db"
   ],
   "targets": {
     "lint": {
