Fix dockerization of git-push-webhook-service

--- a/ee/packages/amplication-git-push-webhook-service/project.json
+++ b/ee/packages/amplication-git-push-webhook-service/project.json
@@ -32,7 +32,8 @@
       "options": {
         "outputPath": "dist/ee/packages/amplication-git-push-webhook-service",
         "main": "ee/packages/amplication-git-push-webhook-service/src/main.ts",
-        "tsConfig": "ee/packages/amplication-git-push-webhook-service/tsconfig.app.json"
+        "tsConfig": "ee/packages/amplication-git-push-webhook-service/tsconfig.app.json",
+        "webpackConfig": "ee/packages/amplication-git-push-webhook-service/webpack.config.js"
       },
       "configurations": {
         "production": {
@@ -53,6 +54,13 @@
         "production": {
           "buildTarget": "amplication-git-push-webhook-service:build:production"
         }
+      }
+    },
+    "docker:build": {
+      "executor": "@nx-tools/nx-docker:build",
+      "options": {
+        "push": false,
+        "tags": ["amplication/git-push-webhook-service:latest"]
       }
     }
   },
