--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -31,7 +31,8 @@
       "options": {
         "outputPath": "dist/packages/amplication-git-pull-request-service",
         "main": "packages/amplication-git-pull-request-service/src/main.ts",
-        "tsConfig": "packages/amplication-git-pull-request-service/tsconfig.app.json"
+        "tsConfig": "packages/amplication-git-pull-request-service/tsconfig.app.json",
+        "webpackConfig": "ee/packages/amplication-git-push-webhook-service/webpack.config.js"
       },
       "configurations": {
         "production": {
@@ -50,6 +51,13 @@
         "production": {
           "buildTarget": "amplication-git-pull-service:build:production"
         }
+      }
+    },
+    "docker:build": {
+      "executor": "@nx-tools/nx-docker:build",
+      "options": {
+        "push": false,
+        "tags": ["amplication/git-pull-request-service:latest"]
       }
     }
   },
