--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -73,6 +73,7 @@ jobs:
           echo ::set-output name=affected::"$(npx nx print-affected --type=app | jq -c .projects)"
 
   dockerize:
+    if: ${{ needs.ci.outputs.affected != '[]' }}
     name: Dockerize
     runs-on: ubuntu-latest
     needs: ci
