feat(server):update docker file

--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -3,6 +3,8 @@ FROM node:16.16-alpine AS base
 WORKDIR /app
 
 COPY ./dist/packages/amplication-server/package.json .
+COPY ./packages/amplication-server/.env* .
+COPY ./packages/amplication-prisma-db/prisma/schema.prisma .
 
 RUN npm i --omit=dev
 
