fix(server): copy bin

--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -1,10 +1,11 @@
-FROM node:16.16-alpine AS base
+FROM node:16.16 AS base
 
 WORKDIR /app
 
 COPY ./dist/packages/amplication-server/package.json .
 COPY ./packages/amplication-server/.env* .
 COPY ./packages/amplication-prisma-db/prisma/schema.prisma .
+COPY ./packages/amplication-prisma-db/prisma/generated/prisma-client/libquery_engine-darwin-arm64.dylib.node .
 
 RUN npm i --omit=dev
 
