removed commands from setup dev and move to the root package json

--- a/nx.json
+++ b/nx.json
@@ -56,7 +56,7 @@
       "dependsOn": ["build", "^postbuild"]
     },
     "serve": {
-      "dependsOn": ["db:prisma:generate"]
+      "dependsOn": ["db:prisma:generate", "^db:prisma:generate"]
     },
     "lint": {
       "inputs": ["default", "{workspaceRoot}/.eslintrc.json"]
