move design system to nx

--- a/nx.json
+++ b/nx.json
@@ -19,6 +19,7 @@
           "build",
           "prepare",
           "check-format",
+          "format",
           "test",
           "db:init",
           "lint",
