--- a/packages/amplication-design-system/project.json
+++ b/packages/amplication-design-system/project.json
@@ -6,23 +6,20 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "@nrwl/web:rollup",
-      "outputs": ["{options.outputPath}"],
+      "executor": "nx:run-commands",
+      "outputs": ["{projectRoot}/dist"],
       "options": {
-        "outputPath": "dist/packages/amplication-design-system",
-        "tsConfig": "packages/amplication-design-system/tsconfig.lib.json",
-        "project": "packages/amplication-design-system/package.json",
-        "entryFile": "packages/amplication-design-system/src/index.ts",
-        "external": ["react/jsx-runtime"],
-        "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
-        "compiler": "swc",
-        "assets": [
-          {
-            "glob": "packages/amplication-design-system/README.md",
-            "input": ".",
-            "output": "."
-          }
-        ]
+        "command": "npx rollup -c",
+        "cwd": "packages/amplication-design-system"
+      },
+      "dependsOn": ["format"]
+    },
+    "format": {
+      "executor": "nx:run-commands",
+      "inputs": ["{projectRoot}/src"],
+      "options": {
+        "command": "prettier --write .",
+        "cwd": "packages/amplication-design-system"
       }
     },
     "lint": {
