--- a/packages/amplication-client/project.json
+++ b/packages/amplication-client/project.json
@@ -3,5 +3,9 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/@amplication/client/src",
   "projectType": "application",
+  "implicitDependencies": [
+    "amplication-design-system",
+    "amplication-code-gen-types"
+  ],
   "tags": []
 }
