--- a/packages/amplication-design-system/project.json
+++ b/packages/amplication-design-system/project.json
@@ -6,13 +6,24 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
-      "outputs": ["{projectRoot}/dist"],
+      "executor": "@nrwl/web:rollup",
+      "outputs": ["{options.outputPath}"],
       "options": {
-        "command": "npx rollup -c",
-        "cwd": "packages/amplication-design-system"
-      },
-      "dependsOn": ["format"]
+        "outputPath": "dist/packages/amplication-design-system",
+        "tsConfig": "packages/amplication-design-system/tsconfig.lib.json",
+        "project": "packages/amplication-design-system/package.json",
+        "entryFile": "packages/amplication-design-system/src/index.ts",
+        "external": ["react/jsx-runtime"],
+        "rollupConfig": "@nrwl/react/plugins/bundle-rollup",
+        "compiler": "swc",
+        "assets": [
+          {
+            "glob": "packages/amplication-design-system/README.md",
+            "input": ".",
+            "output": "."
+          }
+        ]
+      }
     },
     "format": {
       "executor": "nx:run-commands",
