Update prisma migration scripts in initContainer

--- a/helm/charts/services/amplication-git-pull-service/templates/deployment.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
               memory: {{ .Values.maxMemory }}
           {{- end }}
           command: ["/bin/sh"]
-          args: ["-c", "npm run migrate:up", ";", "exit"]
+          args: ["-c", "npx prisma migrate deploy", ";", "exit"]
           env:
           - name: POSTGRESQL_URL
             valueFrom:
