Attempt to fix amplication-server deployment

--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -1,4 +1,9 @@
-FROM node:16.16-alpine AS base
+FROM node:16.16-slim AS base
+
+# Required to run Prisma on ARM64 machines
+# https://github.com/prisma/prisma/issues/861#issuecomment-881992292
+RUN apt-get update
+RUN apt-get install -y openssl
 
 WORKDIR /app
 
@@ -7,6 +12,10 @@ COPY ./dist/packages/amplication-server/package.json .
 RUN npm i --omit=dev
 
 COPY ./dist/packages/amplication-server .
+
+# This is required to include the Prisma client in the image
+COPY ./node_modules/@amplication/prisma-clients/amplication-prisma-db ./node_modules/@amplication/prisma-clients/amplication-prisma-db
+
 
 ENV PORT=3333
 EXPOSE $PORT
