--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -12,20 +12,14 @@
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/amplication-server/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/amplication-server/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-server"
-      ],
+      "outputs": ["coverage/packages/amplication-server"],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.ts",
         "passWithNoTests": true
@@ -33,9 +27,7 @@
     },
     "test:e2e": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-server"
-      ],
+      "outputs": ["coverage/packages/amplication-server"],
       "options": {
         "jestConfig": "packages/amplication-server/jest.config.e2e.ts",
         "passWithNoTests": true,
@@ -44,18 +36,20 @@
     },
     "build": {
       "executor": "@nrwl/node:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
-      "dependsOn": [
-        "graphql:schema:generate",
-        "graphql:schema:check"
-      ],
+      "outputs": ["{options.outputPath}"],
+      "dependsOn": ["graphql:schema:generate", "graphql:schema:check"],
       "options": {
         "webpackConfig": "packages/amplication-server/webpack.config.js",
         "outputPath": "dist/packages/amplication-server",
         "main": "packages/amplication-server/src/main.ts",
-        "tsConfig": "packages/amplication-server/tsconfig.app.json"
+        "tsConfig": "packages/amplication-server/tsconfig.app.json",
+        "assets": [
+          {
+            "glob": "prisma",
+            "input": "packages/amplication-prisma-db",
+            "output": "prisma"
+          }
+        ]
       },
       "configurations": {
         "production": {
@@ -86,15 +80,9 @@
     },
     "graphql:schema:generate": {
       "executor": "nx:run-commands",
-      "inputs": [
-        "{projectRoot}/src/**/*.ts"
-      ],
-      "dependsOn": [
-        "^db:prisma:generate"
-      ],
-      "outputs": [
-        "packages/amplication-server/src/schema.graphql"
-      ],
+      "inputs": ["{projectRoot}/src/**/*.ts"],
+      "dependsOn": ["^db:prisma:generate"],
+      "outputs": ["packages/amplication-server/src/schema.graphql"],
       "options": {
         "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register scripts/generate-graphql-schema.ts",
         "cwd": "packages/amplication-server"
@@ -102,12 +90,8 @@
     },
     "graphql:schema:check": {
       "executor": "nx:run-commands",
-      "inputs": [
-        "{projectRoot}/src/schema.graphql"
-      ],
-      "dependsOn": [
-        "graphql:schema:generate"
-      ],
+      "inputs": ["{projectRoot}/src/schema.graphql"],
+      "dependsOn": ["graphql:schema:generate"],
       "options": {
         "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register scripts/check-graphql-schema",
         "cwd": "packages/amplication-server"
@@ -117,9 +101,7 @@
       "executor": "@nx-tools/nx-docker:build",
       "options": {
         "push": false,
-        "tags": [
-          "amplication/server:latest"
-        ]
+        "tags": ["amplication/server:latest"]
       }
     }
   },
