--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -1,13 +1,6 @@
-# Network
-PORT = 4567
-
 # Secrets
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 
 # Kafka
 KAFKA_BROKERS='localhost:9092'
-# Postgres
-POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
-POSTGRESQL_USER=admin
-POSTGRESQL_PASSWORD=admin
-SERVICE_DB_NAME=amplication-git-push-webhook-service
+KAFKA_CLIENT_ID='amplication-git-push-webhook-service'
