Use digest instead of text tag

--- a/helm/charts/services/amplication-server/templates/deployment.yaml
+++ b/helm/charts/services/amplication-server/templates/deployment.yaml
@@ -10,7 +10,7 @@ spec:
       serviceAccountName: default
       initContainers:
         - name: "{{ .Values.name }}-migrate"
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}@{{ .Values.image.tag | default .Chart.AppVersion }}"
           {{- if .Values.autoscaling.enabled }}
           resources:
             limits:
@@ -32,7 +32,7 @@ spec:
       containers:
         - name: '{{ .Values.name }}'
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}@{{ .Values.image.tag | default .Chart.AppVersion }}"
           {{- if .Values.autoscaling.enabled }}
           resources:
             requests:
