--- a/helm/charts/services/amplication-git-pull-service/templates/deployment.yaml
+++ b/helm/charts/services/amplication-git-pull-service/templates/deployment.yaml
@@ -5,7 +5,7 @@ spec:
     spec:
       initContainers:
         - name: "{{ .Values.name }}-migrate"
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}@{{ .Values.image.tag | default .Chart.AppVersion }}"
           {{- if .Values.autoscaling.enabled }}
           resources:
             limits:
